<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".ui.notifications.NotificationsFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/about_app_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_margin="30dp"
        android:text="@string/version"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/desc1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="30dp"
        android:text="@string/about_app_desc1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/version" />

    <TextView
        android:id="@+id/desc2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="30dp"
        android:text="@string/about_app_desc2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc1" />

    <TextView
        android:id="@+id/desc3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="30dp"
        android:text="@string/about_app_desc3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc2" />

    <TextView
        android:id="@+id/desc4"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="30dp"
        android:text="@string/about_app_desc4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc3" />

    <TextView
        android:id="@+id/desc5"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="30dp"
        android:text="@string/about_app_desc5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc4" />

</androidx.constraintlayout.widget.ConstraintLayout>
